--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
   <style>
+    html{
+      padding: 20px 20px 0px 20px;
+      font-family: arial, courier;
+    }
   </style>
   <head>
   </head>
